--- a/charts_flutter/pubspec.yaml
+++ b/charts_flutter/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   # The latest pub version is commented out and shown below as an example.
   # charts_common: 0.8.0
   charts_common:
-    path: ../charts_common/
+    path: charts_common/
   collection: ^1.14.5
   flutter:
     sdk: flutter
