--- a/charts_flutter/pubspec.yaml
+++ b/charts_flutter/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
   # The pub version of charts_flutter will point to the pub version of charts_common.
   # The latest pub version is commented out and shown below as an example.
   # charts_common: 0.8.0
-  charts_common:
-    path: charts_common/
+  charts_common: any
   collection: ^1.14.5
   flutter:
     sdk: flutter
